[gd_scene load_steps=4 format=3 uid="uid://bn47r0virgk51"]

[ext_resource type="Script" path="res://scripts/pant.gd" id="1_s05nr"]
[ext_resource type="Texture2D" uid="uid://dvhe2r8f1aa8r" path="res://assets/Pant_.png" id="2_6v7f6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bjdfg"]
radius = 112.0
height = 360.0

[node name="Pant" type="Node2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_s05nr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6v7f6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bjdfg")
debug_color = Color(0.279287, 0.588505, 0.635666, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
